# agentalloy

./: .aider.chat.history.md  .aider.input.history  .containerignore  .copilot-review-comments.md  .env.apple-silicon  .env.cpu  .env.example  .env.nvidia  .env.strix-point  .gitignore  .hermes.md  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  BRANCHES.md  CHANGELOG.md  CLAUDE.md  Containerfile  INSTALL.md  LICENSE  README.md  SETUP_WIZARD_UX_SPEC.md  THIRD_PARTY_LICENSES.md  _check_intake.py  _verify_intake.py  compose.radeon.yaml  compose.yaml  container-setup-path.md  duplicate_skill_detector.py  octopus_summary.md  pr_body.txt  pyproject.toml  test_imports.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  container-build.yml
.hermes/: copilot_feedback.md  proxy_spec.md  tier-sunset-handoff.md  touch_up_spec.md
.hermes/contracts/: 01-ingest-intake-skills.md  02-phase-cli-subcommand.md  03-rewrite-harness-templates.md  04-docs-and-intake-skill-update.md  05-update-tests.md  05a-update-wire-harness-tests.md  05b-create-phase-cli-tests.md
.hermes/plans/: 2026-05-16_210500-intake-activation-workflow.md
.hermes/scripts/: execute_task_0.py  push_task.py
.home/plans/: 2026-05-26_143000-copilot-pr8-feedback-fixes.md
design/: container-ghcr-migration.md
docs/: ARCHITECTURE.md  MATTPOCOCK-IMPORT-ANALYSIS-2026-04-28.md  NEXT-STEPS.md  PACK-AUTHORING.md  SKILL-AUTHORING-METHODOLOGY.md  TODO-next-directions.md  downstream-fork.md  embedding-metadata-prefix-spec.md  harness-classification.md  llms.md  operator.md  phase-lock-file.md  post_poc_skill_builder_instructions.md  profiles-and-overrides.md  proxy-architecture.md  qwen-runtime-role-findings.md  retrieval-redesign.md  sdd-context-remind-hook-spec.md  session-handoff-2026-05-06-17-pack-queue.md  sidecar-experience.md  signal-detection-and-domain-trigger-spec.md  skill-authoring-and-overrides-spec.md  skill_builder_instructions.md  skills-inventory.md  skillsmith-authoring-reference.md  skillsmith-model-selection.md  skillsmith-pack-inventory.md  skillsmith-remind-provider.md  troubleshooting.md  two-model-pipeline.md  v1-acceptance-test-plan.md
docs/archive/: direct-container-runtime-setup-spec.md  direct-container-runtime-setup.md  unified-setup-direct-runtime-container.md
docs/audit/: proxy-prompt-install-flow.md
docs/build-sequence/: 00-index.md  01-foundation.md  02-contracts.md  03-signal-layer.md  04-code-indexer-integration.md  05-tier3-hardening.md
docs/design/: container-kuzu-lock-resolution-kanban.md  container-kuzu-lock-resolution-tests.md  container-kuzu-lock-resolution.md  container-setup-experience.md  container-setup-improvements.md  direct-container-runtime-setup.md  unified-setup-direct-runtime-container.md
docs/experiments/: poc-composed-vs-flat.md
docs/install/: contracts.md  harness-catalog.md  spec.md  test-plan.md
docs/plan/: test-cycle-fixes.md
docs/skill-review-history/: 2026-04-28-batch-2-stack-foundations.md  2026-04-28-batch-3-protocol-and-flags.md  2026-04-28-mattpocock-import.md  README.md
docs/specs/: container-kuzu-lock-resolution.md  direct-container-runtime-setup-spec.md  multi-harness-wrap-and-provider-registry.md
docs/tests/: container-setup-experience.md  container-setup-improvements.md  direct-container-runtime-setup.md  unified-setup-direct-runtime-container.md
eval/: __main__.py  benchmark.py  recall.py  run_poc.py  tasks.py
eval/layers/: __init__.py  composed_vs_flat.py  cross_model.py  idempotency.py  retrieval_quality.py  session_simulation.py
experiments/skill-tax/: handoff.md
fixtures/: skill-authoring-agent.md  skill-authoring-guidelines.md  skill-qa-agent.CHANGELOG.md  skill-qa-agent.md
fixtures/bootstrap_sample/: sys-sample-governance.md
fixtures/domain/: git-commit-discipline.yaml  http-error-contract-design.yaml  py-fastapi-endpoint-design.yaml  py-sqlite-migrations.yaml  pytest-fixtures-and-mocks.yaml
fixtures/system/: sys-governance-always.yaml  sys-governance-build-phase.yaml  sys-governance-design-category.yaml
fixtures/upstream/: registry.yaml
memory/: issue-NXS-765.md  issue-NXS-766.md  issue-NXS-767.md  issue-NXS-768.md  issue-NXS-769.md  issue-NXS-779.md  issue-NXS-780.md  issue-NXS-781.md
plans/: container-ghcr-migration-plan.md
pytest-of-nmeyers/: pytest-current
pytest-of-nmeyers/pytest-0/: test_aidercurrent  test_all_valid_harnesses_accepcurrent  test_appends_to_existing_claudcurrent  test_clinecurrent  test_closed_creates_configcurrent  test_creates_claude_mdcurrent  test_creates_gemini_mdcurrent  (+27 more)
scripts/: author_skill.py  calibrate_classifier_threshold.py  check_code_blocks.py  check_jsx.py  check_jsx_artifacts.py  check_jsx_prose.py  critic_only_audit.py  debug_figure.py  debug_figure2.py  debug_figure3.py  debug_nextjs.py  debug_nextjs2.py  debug_nextjs3.py  debug_strip.py  export-corpus-to-yaml.py  migrate-seeds-to-packs.py  rebrand_rename.py  strip_jsx.py  verify_intake.py  verify_jsx_clean.py
seeds/: test-driven-development.yaml
specs/: container-ghcr-migration.md
tests/: _wire_compat.py  conftest.py  run_jsx_check.py  run_jsx_check2.py  support.py  test_anthropic_router.py  test_applicability.py  test_authoring_flow.py  test_authoring_gate.py  test_backup_restore.py  test_bootstrap.py  test_classifier_similarity.py  test_code_indexer_integration.py  test_codex_provider.py  test_compose_contract.py  test_compose_handler.py  test_compose_openapi.py  test_compose_stage_errors.py  test_compose_telemetry.py  test_config.py  test_container_e2e.py  test_container_edge_cases.py  test_container_integration.py  test_container_runtime.py  test_container_service.py  test_contracts.py  test_copilot_cli_provider.py  test_corpus_reduction.py  test_customize.py  test_dedup.py  test_diagnostics_runtime.py  test_fixture_loader.py  test_gates.py  test_golden_path.py  test_governance_assembly.py  test_health.py  test_hook_router_fixes.py  test_hook_router_integration.py  test_ingest.py  test_install_reset.py  (+49 more)
tools/: agentalloy-signal.sh
(+1345 files in other folders)
