[project]
name = "skillsmith"
version = "0.1.0"
description = "Runtime skill composition service — assembles task-specific guidance for agents with governance included."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Navistone" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "kuzu>=0.11",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "duckdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "httpx>=0.27",  # TestClient transport
    "types-pyyaml>=6.0",
]

[project.scripts]
skillsmith = "skillsmith.install.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skillsmith"]
# Force-include the bundled corpus binary files so a future hatchling
# upgrade or a config change can't silently strip them. The `*.duck`
# extension is uncommon enough that defaults aren't reliable.
artifacts = [
    "src/skillsmith/_corpus/skills.duck",
    "src/skillsmith/_corpus/ladybug",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["skill-source/", "fixtures/", "agents/", "agency-agents/", "vercel-labs-agent-skills/", "agent-skills/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# N818 would force every typed exception name to end with "Error"; the LM
# client exception hierarchy uses "Unavailable"/"Timeout"/"BadResponse" names
# by design (mapped to specific HTTP response codes in the contract).
ignore = ["E501", "N818"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/Header/Body are the standard FastAPI default-argument idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Header"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedFunction = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring a live LM Studio or other external service",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
]
