[project]
name = "agentalloy"
version = "1.0.0"
description = "AgentAlloy — just-in-time agent skill composer. Phase-aware, intent-aware retrieval and assembly from a curated 300+ skill corpus. No LLM in the runtime. Governance included. Runtime only; see agentalloy-authoring for corpus authoring."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Nate Meyers" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "kuzu>=0.11",
    "pyyaml>=6.0",
    "rich>=13.0",
    "duckdb>=1.1",
    "asyncpg>=0.31.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.380",
    "httpx>=0.27",  # TestClient transport
    "types-pyyaml>=6.0",
]

[project.scripts]
agentalloy = "agentalloy.install.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["pytest-of-*/", "*.backup.*", "_check_*.py", "_verify_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/agentalloy"]
# Pack source YAMLs live INSIDE the package at src/agentalloy/_packs/ so
# hatchling ships them with the wheel automatically. Binary corpus
# (LadybugDB + DuckDB) is no longer shipped; it's generated locally on
# first install when users pick packs via `agentalloy install-packs`.
artifacts = [
    "src/agentalloy/_corpus/.gitkeep",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
exclude = ["skill-source/", "fixtures/", "agents/", "agency-agents/", "vercel-labs-agent-skills/", "agent-skills/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
# N818 would force every typed exception name to end with "Error"; the LM
# client exception hierarchy uses "Unavailable"/"Timeout"/"BadResponse" names
# by design (mapped to specific HTTP response codes in the contract).
ignore = ["E501", "N818"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Query/Header/Body are the standard FastAPI default-argument idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Header"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
include = ["src", "tests"]
# Authoring subpackage is being redesigned — exclude from strict typecheck
# until the new approach lands. See the navistone fork divergence note in
# the 0875b29 merge commit (authoring kept here, removed on nrmeyers).
exclude = ["src/agentalloy/authoring/**"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnusedFunction = false
reportPrivateUsage = "warning"
reportUnknownLambdaType = "warning"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring a live LM Studio or other external service",
    "slow: tests that take a long time to run; excluded from the default PR job",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pyjwt>=2.12.1",
    "pyright>=1.1.408",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.12.9",
    "pre-commit>=4.0",
]
